* Add more test cases (ComradeKev)

* update to Great War 2.5 (Jason Clark)

* Fix bug 2915452 Shouldn't be able to blitz with non-blitzing units by incrementally moving (ComradeKev)

* Fix bug 2915057 Bombers shouldn't be able to move then pick up paratroops (ComradeKev)

Changes for 1.1.2

* Add more test cases (ComradeKev)

* Upgrade NWO to NWO EB (OnanTheBrBr)

* Fix bug 2909898 2-move units allowed to move 'through' enemy forces (ComradeKev)

* Fix test cases for LHTR rules revisions below (ComradeKev)

* Fix bug 2905542 LHTR HB not adding +1 to SBR rolls (ComradeKev)

* Fix bug 2908897 occupiedTerrOf not working when liberating allied capital (ComradeKev)

* fix null pointer in move with Twilight Imperium (sgb)

* Create/use Properties for various entries in Constants for consistency (ComradeKev)

* Fix invalid property used in isTransportUnloadRestricted of TransportTracker (ComradeKev)

* Fix bug 2907042 Revised submerged subs don't fight in subsequent defending battles (ComradeKev) 

* increase download map panel size (sgb)

* if a url in the download games xml starts with !, ignore it and disable download button.  this allows better formatting  (sgb)

* game engine prevents ai from repairing a territory more than the number of times it was hit (sgb)

* fix bug 2899005, Long air range icon works only with "fighter" and "bomber" (sgb)

* fix bug 2905298, Wrong message Cant place sea unit on land (sgb)

* fix bug 2905986, occupiedTerrOf don't work with capital (sgb)

* skins can be downloaded/read from the users map folder (sgb)

Changes for 1.1.1

* new neutral flag images (Veqryn)

* allow users the option to replace downloaded maps when downloading (sgb)

* don't allow downloading a map with the same name as one that comes with the default TripleA install (sgb)

* fix bug 2893890, fighters with no movement left can hover in sea zones where carriers can be placed (sgb)
